--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(c_threadProject_1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(c_threadProject_1 main.cpp)
+add_executable(c_threadProject_1 #[[main.cpp]]
+        asyncTest.cpp)
 
-#add_executable(c_threadProject_1 ccia_code_samples-master/listings/listing_2.5.cpp)
+#add_executable(c_threadProject_1 ccia_code_samples-master/listings/listing_4.7.cpp)
 
